ProdIND/ProdPrograms/force-app/main/default/objects/Reassign_Owner_Log__c/Reassign_Owner_Log__c.object-meta.xml
<CustomObject>
    <description>An object for storing logs of lead and case owner reassignment initiated from lwc component</description>
    <label>Reassign Owner Log</label>
    <nameField>
        <displayFormat>ROL-{0000000000}</displayFormat>
        <label>Reassign Owner Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reassign Owner Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>