ProdIND/ProdPrograms/force-app/main/default/objects/Reassign_Owner_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of case record</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Reassign Owner Logs</relationshipLabel>
    <relationshipName>Reassign_Owner_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>