ProdIND/ProdPrograms/force-app/main/default/objects/Reassign_Owner_Log__c/fields/Case_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Case_RecordType__c</fullName>
    <description>RecordType name of the linked case record</description>
    <formula>Case__r.RecordType.Name</formula>
    <label>Case RecordType</label>
    <type>Text</type>
</CustomField>