ProdIND/ProdPrograms/force-app/main/default/objects/Reassign_Owner_Log__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of Loan Application record</description>
    <label>Loan Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Reassign Owner Logs</relationshipLabel>
    <relationshipName>Reassign_Owner_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>