ProdIND/ProdPrograms/force-app/main/default/objects/Reassign_Owner_Log__c/fields/New_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Record_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of user who is the new owner of the record</description>
    <label>New Record Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>New_Owner_Reassign_Owner_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>