ProdIND/ProdPrograms/force-app/main/default/objects/Reassign_Owner_Log__c/fields/Previous_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Previous_Record_Owner__c</fullName>
    <description>As SF does not allow custom polymorphic lookup fields and a lookup to the group is also not allowed, this field is created as a text field to store the ID of the user/group who was the previous owner of the record</description>
    <inlineHelpText>ID of user/group who was the previous owner of the record</inlineHelpText>
    <label>Previous Record Owner</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>