ProdIND/ProdPrograms/force-app/main/default/objects/Reassign_Owner_Log__c/fields/Reassignment_Approver__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the name of the user who is responsible for approving the record reassignment</description>
    <label>Reassignment Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approver_Reassign_Owner_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>