ProdIND/ProdPrograms/force-app/main/default/objects/Reassign_Owner_Log__c/fields/Reassignment_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the name of the user who requested the record reassignment</description>
    <label>Reassignment Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requestor_Reassign_Owner_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>