ProdIND/ProdPrograms/force-app/main/default/objects/Reassign_Owner_Log__c/fields/Reassignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_Type__c</fullName>
    <description>This field will store the type of reassignment</description>
    <label>Reassignment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Assignment</fullName>
            </value>
            <value>
                <fullName>FI Case Assignment</fullName>
            </value>
            <value>
                <fullName>CMU Case Assignment</fullName>
            </value>
            <value>
                <fullName>CVO Assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>