ProdIND/ProdPrograms/force-app/main/default/objects/Reassign_Owner_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reassignment_Type__c</columns>
    <columns>Loan_Application__c</columns>
    <columns>Case__c</columns>
    <columns>Case_RecordType__c</columns>
    <columns>Previous_Record_Owner__c</columns>
    <columns>New_Record_Owner__c</columns>
    <columns>Reassignment_Requestor__c</columns>
    <columns>Reassignment_Approver__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>